@@ -83,7 +83,7 @@ public class FirmwareUploader {
 		t.start();
 	}
 
-	static public final String DEFAULT_UPDATES_URL = "http://firmware.makerbot.com/firmware.xml";
+	static public final String DEFAULT_UPDATES_URL = "http://www.sharebot.it/firmware.xml";
 
 	/**
 	 * Get the URL of the source for dowloading
