@@ -1,3 +1,7 @@
+0041 replicatorG
+* Added bed temperature
+* Fixed error in eprom mapping
+
 0040 ReplicatorG
 * Replicator 2 profile now more robust
 * support for selecting between s3g, x3g file formats (future bots)
